--- a/template/rooms/show.html.twig
+++ b/template/rooms/show.html.twig
@@ -7,9 +7,12 @@ Gestionnaire d'hôtels Hb-HotelManager
 {% block content %}
 
 
-<a href="">
-    <i class="fa fa-arrow-left" aria-hidden="true"></i> retour à la liste
+<a href="{{ env.base_path }}">
+    <i class="fa fa-arrow-left" aria-hidden="true"></i> retour à la liste des chambres
 </a>
+
+{% if not room.client %}
+
 <!-- CAS 1 : La chambre est innoccupée -->
 <div class="card mb-3">
     <div class="card-header">
@@ -17,13 +20,14 @@ Gestionnaire d'hôtels Hb-HotelManager
     </div>
     <div class="card-body"> 
 
-        <form action="">
+        <form action="{{ env.base_path ~ '/rooms/' ~ room.id ~ '/edit/'}}" method="post" class="form">
 
             <div class="form-group">
                 <label for="formClient">Ajouter un client</label>
-                <select name="" id="formClient" class="form-control">
-                    <option value="">Emma Watson</option>
-                    <option value="">John Doe</option>
+                <select name="client_id" id="formClient" class="form-control">
+                    {% for client in clients %}
+                        <option value="{{client.id}}">{{client.firstname}} {{client.lastname}}</option>
+                    {% endfor %}
                 </select>
             </div>
 
@@ -32,12 +36,13 @@ Gestionnaire d'hôtels Hb-HotelManager
         </form>
     </div>
     <div class="card-footer">
-        <a href="#" class="btn btn-danger">
+        <a href="{{ env.base_path ~ '/rooms/' ~ room.id ~ '/delete' }}" class="btn btn-danger">
             <i class="fa fa-trash" aria-hidden="true"></i> Supprimer la chambre
         </a>
     </div>
 </div>
 
+{% else %}
 
 <!-- CAS 2 : La chambre est occupée -->
 
@@ -47,13 +52,24 @@ Gestionnaire d'hôtels Hb-HotelManager
     </div>
     <div class="card-body">
         <p>
-            Occupée par Emma Watson. <a href="" class="text-danger">Supprimer la reservation</a>
+            Occupée par {{room.client.firstname}} {{room.client.lastname}}. 
+            <!-- <a href="{{ env.base_path ~ '/rooms/' ~ room.id ~ '/edit/'}}" class="text-danger">Supprimer la reservation</a> -->
+
+            <form method="post" action="{{ env.base_path ~ '/rooms/' ~ room.id ~ '/edit/'}}">
+                <input type="text" hidden name="id" value="{{ room.id }}"></input>
+                <input type="text" hidden name="client_id" value=""></input>
+                <button class="btn btn-danger" type="submit"><i class="fa fa-pencil" aria-hidden="true"></i>Supprimer la réservation</input>
+            </form>
+
+
         </p>
     </div>
     <div class="card-footer">
-        <a href="#" class="btn btn-danger">
+        <a href="{{ env.base_path ~ '/rooms/' ~ room.id ~ '/delete' }}" class="btn btn-danger">
             <i class="fa fa-trash" aria-hidden="true"></i> Supprimer la chambre
         </a>
     </div>
 </div>
+
+{% endif %}
 {% endblock %}
